# ai-trader

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: lint.yml  test.yml
projects/backtester/: README.md  backtester.py  config.yaml  requirements.txt
projects/backtester/src/: benchmark.py  charts.py  costs.py  dashboard.py  data_loader.py  engine.py  metrics.py  pipeline.py  position.py  strategy.py
projects/backtester/tests/: test_benchmark.py  test_charts.py  test_costs.py  test_data_loader.py  test_engine.py  test_metrics.py  test_pipeline.py  test_position.py  test_scaffolding.py  test_strategy.py
projects/scraper/: README.md  config.yaml  requirements.txt  scraper.py
projects/scraper/tests/: test_backfill.py  test_live.py  test_resilience.py  test_utils.py
projects/signal-lab/: .gitignore  README.md  collect.py  config.yaml  requirements.txt  signal_lab.py
projects/signal-lab/src/: collect.py  data.py  features.py  labels.py  metrics.py  pipeline.py  scaler.py  walk_forward.py  wandb_logger.py
projects/signal-lab/tests/: test_collect.py  test_data.py  test_features.py  test_funding_collect.py  test_funding_features.py  test_labels.py  test_lightgbm.py  test_logistic.py  test_lstm.py  test_onchain.py  test_orderbook_collect.py  test_orderbook_features.py  test_pipeline.py  test_walk_forward.py
projects/trainer/: README.md  config.yaml  explore.py  requirements.txt  trainer.py
tests/: test_backfill.py  test_utils.py
(+70 files in other folders)
