[project]
name = "ai-trader"
version = "0.1.0"
description = "Monorepo for crypto ML trading research projects"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501", "SIM105", "SIM117", "B904"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["projects/scraper/tests"]
asyncio_mode = "auto"
